log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Fri 31 Mar 2023 12:07:59 PM UTC: 
 arraylist.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:15:59: error: expected ‘)’ before ‘;’ token
   15 |   ArrayList* nuevo = (ArrayList*) malloc(sizeof(ArrayList);
      |                                         ~                 ^
      |                                                           )
arraylist.c:23:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   23 | }
      | ^
test.c:411:5: error: ‘main’ is normally a non-static function [-Werror=main]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:434:1: error: expected declaration or statement at end of input
  434 | }
      | ^
test.c:8:6: error: unused variable ‘msg’ [-Werror=unused-variable]
    8 | char msg[300];
      |      ^~~
In file included from test.c:5:
arraylist.c:15:14: error: unused variable ‘nuevo’ [-Werror=unused-variable]
   15 |   ArrayList* nuevo = (ArrayList*) malloc(sizeof(ArrayList);
      |              ^~~~~
test.c:435: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:411:5: error: ‘main’ defined but not used [-Werror=unused-function]
  411 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
arraylist.c:41:5: error: ‘get_size’ defined but not used [-Werror=unused-function]
   41 | int get_size(ArrayList * l){
      |     ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0288c88
Fri 31 Mar 2023 12:08:20 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
bb42fc9
Fri 31 Mar 2023 12:15:46 PM UTC: 
 arraylist.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
308d0d8
Fri 31 Mar 2023 12:19:55 PM UTC: 
 arraylist.c | 22 +++++++++++++++++++++-
 1 file changed, 21 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
c38d512
Sun 02 Apr 2023 04:04:59 AM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:78:42: error: expected ‘)’ before numeric constant
   78 |   l->data = realloc(l->data, sizeof(void) 2);
      |                    ~                     ^~
      |                                          )
Compilation failed
f0af1fe
Sun 02 Apr 2023 04:06:19 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:78:42: error: expected ‘)’ before ‘(’ token
   78 |   l->data = realloc(l->data, sizeof(void) (2);
      |                    ~                     ^~
      |                                          )
arraylist.c:79:15: error: expected ‘;’ before ‘}’ token
   79 |   l->size = 0;
      |               ^
      |               ;
   80 | }
      | ~              
Compilation failed
f489aaa
Sun 02 Apr 2023 04:06:39 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:78:42: error: expected ‘)’ before numeric constant
   78 |   l->data = realloc(l->data, sizeof(void)2);
      |                    ~                     ^
      |                                          )
Compilation failed
f93e813
Sun 02 Apr 2023 04:07:51 AM UTC: 
 arraylist.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:87:42: error: expected ‘)’ before numeric constant
   87 |   l->data = realloc(l->data, sizeof(void)2);
      |                    ~                     ^
      |                                          )
Compilation failed
0d5aa51
Sun 02 Apr 2023 04:08:02 AM UTC: 
 arraylist.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:86:42: error: expected ‘)’ before numeric constant
   86 |   l->data = realloc(l->data, sizeof(void)2);
      |                    ~                     ^
      |                                          )
Compilation failed
1013439
Sun 02 Apr 2023 04:08:50 AM UTC: 
 arraylist.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:101:42: error: expected ‘)’ before numeric constant
  101 |   l->data = realloc(l->data, sizeof(void)2);
      |                    ~                     ^
      |                                          )
Compilation failed
d6ba520
Sun 02 Apr 2023 04:09:15 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:101:42: error: expected ‘)’ before ‘(’ token
  101 |   l->data = realloc(l->data, sizeof(void)(2));
      |                    ~                     ^
      |                                          )
Compilation failed
ca0c549
Sun 02 Apr 2023 04:09:24 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘clean’:
arraylist.c:101:42: error: expected ‘)’ before ‘(’ token
  101 |   l->data = realloc(l->data, sizeof(void)((2));
      |                    ~                     ^
      |                                          )
arraylist.c:102:15: error: expected ‘;’ before ‘}’ token
  102 |   l->size = 0;
      |               ^
      |               ;
  103 | }
      | ~              
Compilation failed
febfd9a
